Add SSH and GPG key templates from Bitwarden

--- a/dot_ssh/id_ed25519.pub.tmpl
+++ b/dot_ssh/id_ed25519.pub.tmpl
@@ -1,4 +1,4 @@
 {{- $sshKey := bitwardenFields "item" "SSH Key" -}}
-{{- if $sshKey.private_key -}}
-{{ $sshKey.private_key.value }}
+{{- if $sshKey.public_key -}}
+{{ $sshKey.public_key.value }}
 {{- end -}}
