--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,4 +1,4 @@
-{{- $email := "caio.cdcs@gmail.com" -}}
+{{- $email := "caio@cdcs.dev" -}}
 {{- $vaultwardenServer := "https://vault.int.cdcs.dev" -}}
 
 [data]
