update dot files and remove Brewfile

--- a/private_dot_ssh/private_id_ed25519.tmpl
+++ b/private_dot_ssh/private_id_ed25519.tmpl
@@ -1,4 +1,6 @@
-{{- $sshKey := bitwardenFields "item" "SSH Key" -}}
-{{- if $sshKey.private_key -}}
-{{ $sshKey.private_key.value }}
+{{- if (bitwarden "item" "SSH Key") -}}
+{{- $item := bitwarden "item" "SSH Key" -}}
+{{- if $item.notes -}}
+{{ $item.notes }}
+{{- end -}}
 {{- end -}}
